# fastapi-poetry-docker

./: Dockerfile  README.md  docker-compose.override.yaml  docker-compose.traefik.yaml  docker-compose.yaml  pyproject.toml
src/: server.py
src/app/: __init__.py  main.py
