[tool.poetry]
name = "fastapi_traefik"
version = "0.1.0"
description = ""
authors = ["roshan <mailme.roshanbhattarai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
